--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,11 @@ dependencies:
   google_fonts: ^6.2.1
   intl: ^0.19.0
   provider: ^6.1.2
+  flutter_svg: ^2.0.10+1
+  salomon_bottom_bar: ^3.3.2
+  fluttertoast: ^8.2.6
+  jwt_decoder: ^2.0.1
+  expandable: ^5.0.1
 
 dev_dependencies:
   flutter_test:
@@ -65,6 +70,9 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+    - assets/
+    - assets/images/
+    - assets/svgs/
     - .env
 
   # An image asset can refer to one or more resolution-specific "variants", see
