--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,10 @@ dependencies:
   fluttertoast: ^8.2.6
   jwt_decoder: ^2.0.1
   expandable: ^5.0.1
+  fl_chart: ^0.68.0
+  qr_flutter: ^4.1.0
+  qrscan: ^0.3.3
+  permission_handler: ^11.3.1
 
 dev_dependencies:
   flutter_test:
